2004-02-21  Andras Varga

	* cmodule.cc: setGateSize() made more tolerant; this is needed for
	"gate++" NED feature (see nedxml/ChangeLog)

2004-02-20  Andras Varga

	* ctype.cc, cchannel.cc, cgate.cc: introduced cChannelType which 
	replaces cLinkType. See include/ChangeLog for more info.

2004-02-12  Andras Varga

	* cmodule.cc, cgate.cc, cchannel.cc: gave a bool return value to 
	deliver(), "false" meaning that message object should be deleted.

2004-02-11  Andras Varga 

	* csimul.cc, cscheduler.cc: semantic change of getNextEvent()'s and
	selectNextModule()'s return value (see include/ChangeLog)

2004-02-10  Andras Varga 

	* cexception.cc: added storage of module class name (NED type name)

2004-02-09  Andras Varga 

	* ctypes.cc: added methods to cModuleInterface so that it's possible
	to dynamically assemble it (needed by networkbuilder)

2004-02-07  Andras Varga 

	* ctypes.cc: added createOneIfClassIsKnown(const char *classname)

	* cstruct.cc: fix createDescriptorFor() to prepare for missing 
	descriptor object

2004-02-06  Andras Varga

	* cgate.cc: implemented cGate::disconnect(); revised cGate::connectTo()

	* cchannel.cc: added setDelay(double), setError(double), 
	setDatarate(double) to cSimpleChannel

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-09  Andras Varga

	* cmodule.cc: implemented bubble()

2004-01-05  Andras Varga

	* HEAVY CHANGES throughout the code, see include/ChangeLog entry with
	same date.

	* cDisplayStringParser:
	- cDisplayStringParser renamed to cDisplayString
	- backslash parsing improved (now recognizes backslash sequences 
	  \t, \n, \r, \f, \b, \x0A with same meaning as in C/C++)
	- notify() and assemble() only if needed (there is some change)

2003-11-30  Andras Varga

	* all files: info() no longer contains object name and class

2003-11-22  Andras Varga

	* carray.cc: fixed bug in cBag which caused crash under certain rare
	circumstances [reported by Nicolas Betbeder-Matibet]

2003-11-13  Andras Varga
